--- a/css/main.css
+++ b/css/main.css
@@ -61,22 +61,27 @@ footer {
 @media (min-width: 768px) {
   header {
     background-color: #888;
+    width: 75%;
   }
 
   #column-1 {
     background-color: #EA7;
+    width: 75%;
   }
 
   #column-2 {
     background-color: #DEFEC7;
+    width: 75%;
   }
 
   #column-3 {
     background-color: #5EABED;
+    width: 75%;
   }
 
   footer {
     background-color: #888;
+    width: 75%;
   }
   
 }
@@ -86,22 +91,27 @@ footer {
 @media (min-width: 1200px) {
   header {
     background-color: #333;
+    width: 100%;
   }
 
   #column-1 {
     background-color: #DEB175;
+    width: 33.3%;
   }
 
   #column-2 {
     background-color: #BED;
+    width: 33.3%;
   }
 
   #column-3 {
     background-color: #1C1E57;
+    width: 33.3%;
   }
 
   footer {
     background-color: #333;
+    width: 100%;
   }
    
 }
